--- a/javascript/profile-package/recent-activity-badge.handlebars
+++ b/javascript/profile-package/recent-activity-badge.handlebars
@@ -3,7 +3,7 @@
         <div class="clearfix">
             <span class="activity-image"></span>
             <div class="description">
-                Heeft <a href="{{profileRoot}}achievements" data-category="{{badge.badgeCategory}}" class="badge-link category-{{badge.badgeCategory}}">{{badge.description}}</a> {{#unless badge.hideContext}}{{#if userBadge.targetContextName}}verdient voor {{ userBadge.targetContextName }}{{/if}}{{/unless}}
+                Heeft <a href="{{profileRoot}}achievements" data-category="{{badge.badgeCategory}}" class="badge-link category-{{badge.badgeCategory}}">{{badge.description}}</a> {{#unless badge.hideContext}}{{#if userBadge.targetContextName}}verdiend voor {{ userBadge.targetContextName }}{{/if}}{{/unless}}
             </div>
         </div>
         <div class="activity-controls clearfix">
