--- a/javascript/profile-package/recent-activity-exercise.handlebars
+++ b/javascript/profile-package/recent-activity-exercise.handlebars
@@ -3,7 +3,7 @@
         <div class="clearfix">
             <span class="activity-image"></span>
             <div class="description">
-                Heeft <span class="problem-count">{{#unless mobileView}}<a href="{{ profileRoot }}vital-statistics/problems/{{exercise}}">{{/unless}}{{pluralize cProblems "problem"}}{{#unless mobileView}}</a>{{/unless}}</span>{{#if earnedProficiency}} beantwoord om bekwaam{{/if}} te worden in {{exerciseDisplayName}}
+                Behaalde badge:<span class="problem-count">{{#unless mobileView}}<a href="{{ profileRoot }}vital-statistics/problems/{{exercise}}">{{/unless}}{{pluralize cProblems "problem"}}{{#unless mobileView}}</a>{{/unless}}</span>{{#if earnedProficiency}} beantwoord om bekwaam{{/if}} te worden in {{exerciseDisplayName}}
             </div>
         </div>
         <div class="activity-controls">
