--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -1121,12 +1121,12 @@ span.youTube:hover {
             }
 
         .exercise-color.suggested {
-            background-color: #2C7196;
+            background-color: #73982C;
             color: #eee !important;
         }
 
             .exercise-color.suggested:hover {
-                background-color: #2C7196;
+                background-color: #73982C;
             }
 
         .exercise-color.review {
