Fix translation Herzien -> Herhalen

--- a/templates/macros/exercises.html
+++ b/templates/macros/exercises.html
@@ -5,7 +5,7 @@
     <span class="exercise-color suggested"></span>
     <span class="legend-label suggested ">Herhalen</span>
     <span class="exercise-color review"></span>
-    <span class="legend-label review">Herzien</span>
+    <span class="legend-label review">Herhalen</span>
 </div>
 {%- endmacro %}
 
