--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -56,8 +56,10 @@
         <img src="/images/exercise-dashboard-medium.png" height="250" width="320" class="rounded-background">
     </a>
     <p>
-        Iedereen kan de site gratis gebruiken. Gebruik je Google- of Facebook account om <a href="/login">in te loggen</a>  
-		Door in te loggen kun je je voortgang zien en punten en badges verdienen.
+        Iedereen kan de site gratis gebruiken. <br>
+        Om je vorderingen op te slaan en badges te verdienen heb je echter een Google- of Facebook account nodig. 
+        Klik <a href="/login">hier </a>om in te loggen. 
+		
     </p>
     <p>
         Als je nog geen Google account hebt,  
