--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -57,11 +57,11 @@
     </a>
     <p>
         Iedereen kan de site gratis gebruiken. <br>
-        Om je vorderingen op te slaan en badges te verdienen, moet je echter ingelogd zijn. <br>  
-        <br> Klik <a href="/login">hier </a>om in te loggen. 
+        Om je vorderingen op te slaan en badges te verdienen heb je echter een Google- of Facebook account nodig. 
+        Klik <a href="/login">hier </a>om in te loggen. 
 		
     </p>
-    <p> Om in te loggen heb je wel een Google- of Facebookaccount nodig. <br>
+    <p>
         Als je nog geen Google account hebt,  
         <a href="https://www.google.com/accounts/NewAccount">vraag er dan meteen een aan</a>.
     </p>
@@ -102,7 +102,7 @@
     <div class="col1 sixty-forty right">
         <h2> Meer dan alleen video's</h2>
         <p class="justify">
-            Onze <a href="/#browse">collectie video's</a> omvat op dit moment vooral <strong>rekenen en wiskunde</strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
+            Onze <a href="/#browse">collectie video's</a> omvat <strong>reken en wiskunde,</strong> maar ook video's over oefeningen die nog in ontwikkeling zijn,zoals. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
             Geïnspireerd door de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. 
             Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij help mee kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
             &mdash;
