--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -15,7 +15,11 @@
   a.begin-button {
     width: 340px;
     height: 100%;
-    background: -webkit-linear-gradient(top, #26a8e0 40%,#8cc4eb 100%);
+    background-image: linear-gradient(top, #1CAEEC,#1E7EC0);
+    background-image: -o-linear-gradient(top, #1CAEEC,#1E7EC0);
+    background-image: -moz-linear-gradient(top, #1CAEEC,#1E7EC0);
+    background-image: -webkit-linear-gradient(top, #1CAEEC,#1E7EC0);
+    background-image: -ms-linear-gradient(top, #1CAEEC,#1E7EC0);
     border-radius: 8px;
     font-size: 30px;
     display: block;
