--- a/javascript/profile-package/suggested-activity.handlebars
+++ b/javascript/profile-package/suggested-activity.handlebars
@@ -17,7 +17,7 @@
                 <div class="skill-bar-container">{{{skill-bar progress}}}</div>
                 <div class="suggested-activity-controls">
                     <a class="foreground-link" href="{{url}}">
-                        <span class="simple-button">Rock out</span>
+                        <span class="simple-button">Oefen verder</span>
                     </a>
                 </div>
             </div>
