--- a/javascript/profile-package/suggested-activity.handlebars
+++ b/javascript/profile-package/suggested-activity.handlebars
@@ -37,7 +37,7 @@
                 <div class="skill-bar-container">{{{skill-bar progress}}}</div>
                 <div class="suggested-activity-controls">
                     <a class="foreground-link" href="{{url}}">
-                        <span class="simple-button">Watch on</span>
+                        <span class="simple-button">Kijk verder</span>
                     </a>
                  </div>
             </div>
