--- a/javascript/profile-package/coaches.handlebars
+++ b/javascript/profile-package/coaches.handlebars
@@ -1,5 +1,5 @@
 <div class="graph-picker">
-   Coaches hebben toegang tot al je Khan Academy gegevens.
+   Coaches hebben toegang tot al je Khan Academie gegevens.
     <ul class="tabrow">
         <li>
             Jouw student id is {{identifier}}
