--- a/javascript/profile-package/discussion-tab-links.handlebars
+++ b/javascript/profile-package/discussion-tab-links.handlebars
@@ -1,28 +1,28 @@
 <ul class="tabrow">
     <li class="type discussion">
         <a href="{{profileRoot}}discussion" class="graph-link no-recolor discussion-link">
-            Summary
+            Samenvatting
         </a>
     </li>
     <li class="type questions">
         <a href="{{profileRoot}}discussion/questions" class="graph-link no-recolor discussion-link">
-            Questions
+            Vragen
         </a>
     </li>
     <li class="type answers">
         <a href="{{profileRoot}}discussion/answers" class="graph-link no-recolor discussion-link">
-            Answers
+            Antwoorden
         </a>
     </li>
     <li class="type comments">
         <a href="{{profileRoot}}discussion/comments" class="graph-link no-recolor discussion-link">
-            Comments
+            Opmerkingen
         </a>
     </li>
     {{#if profileData.isActivityAccessible}}
         <li class="type notifications">
             <a href="{{profileRoot}}discussion/notifications" class="graph-link no-recolor discussion-link">
-                Notifications
+                Meldingen
             </a>
         </li>
     {{/if}}
