--- a/javascript/exercises-package/problem-template.handlebars
+++ b/javascript/exercises-package/problem-template.handlebars
@@ -44,9 +44,11 @@
 				</div>
 				<span id="hint-remainder"></span>
 			</div>
-			<div class="info-box related-video-box" style="display:none;">
+			<div class="info-box related-video-box">
 				<div id="related-video-content">
-					<span class="info-box-header">Problemen? Bekijk een filmpje.</span>
+					<span class="info-box-header">Uitleg nodig?
+						<span class="watch" style="display:none"> Watch video.</span>
+					</span>
 
 					<div id="related-video-list">
 						<span class="related-content-title">Gerelateerde filmpjes:</span>
