--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -46,13 +46,30 @@
   .blog-date {
     font-color: gray;
   }
+
   #homepage-left-col {
     text-align: justify;
-    max-width: 55%;
     margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
   }
+
+  @media (max-width: 767px) {
+    /* Kinda small margins for kinda small displays */
+    #homepage-left-col { 
+      margin-left: 3%;
+      margin-right: 3%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    /* No margins for small displays */
+    #homepage-left-col { 
+      margin-left: 0%;
+      margin-right: 0%;
+    }
+  }
+
   #homepage-right-col h3 {
 	  border-bottom: 1px solid black;
 	  margin-top: 20px;
