--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -1,116 +1,138 @@
-	#page_sub_nav { display: none; }
-	td { vertical-align: top; }
-	.ui-tooltip, .qtip { max-width: 200px; }
-  .blog-entry { 
-    margin-top:20px;
-  }
-  a.blog-title { 
+#page_sub_nav {
+    display: none;
+}
+
+td {
+    vertical-align: top;
+}
+
+.ui-tooltip, .qtip {
+    max-width: 200px;
+}
+
+.blog-entry {
+    margin-top: 20px;
+}
+
+a.blog-title {
     font-size: 16px;
     color: #26a8e0;
     display: block;
-  }
-  a.blog-title:visited { 
+}
+
+a.blog-title:visited {
     color: #1688b0;
-  }
-  a.begin-button {
+}
+
+a.begin-button {
     width: 340px;
     height: 100%;
-    background-image: linear-gradient(top, #1CAEEC,#1E7EC0);
-    background-image: -o-linear-gradient(top, #1CAEEC,#1E7EC0);
-    background-image: -moz-linear-gradient(top, #1CAEEC,#1E7EC0);
-    background-image: -webkit-linear-gradient(top, #1CAEEC,#1E7EC0);
-    background-image: -ms-linear-gradient(top, #1CAEEC,#1E7EC0);
+    background-image: linear-gradient(top, #1CAEEC, #1E7EC0);
+    background-image: -o-linear-gradient(top, #1CAEEC, #1E7EC0);
+    background-image: -moz-linear-gradient(top, #1CAEEC, #1E7EC0);
+    background-image: -webkit-linear-gradient(top, #1CAEEC, #1E7EC0);
+    background-image: -ms-linear-gradient(top, #1CAEEC, #1E7EC0);
     border-radius: 8px;
     font-size: 30px;
     display: block;
     text-align: center;
     vertical-align: middle;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 5px 5px 5px grey;
     text-shadow: 0px 1px 1px black;
     color: white;
     padding: 30px;
     margin-top: 16px;
-  }
-  a.begin-button:hover {
+}
+
+a.begin-button:hover {
     box-shadow: 3px 3px 4px grey;
     color: white;
     text-shadow: 0px 0px 2px black;
     text-decoration: none;
-  }
-  a.begin-button:visited {
+}
+
+a.begin-button:visited {
     color: white;
     text-decoration: none;
-  }
-  .blog-date {
-    font-color: gray;
-  }
+}
 
-  #homepage-left-col {
+.blog-date {
+    font-color: gray;
+}
+
+#homepage-left-col {
     text-align: justify;
     margin-top: 20px;
     margin-left: 10%;
     margin-right: 10%;
-  }
+}
 
-  @media (max-width: 767px) {
-    /* Kinda small margins for kinda small displays */
-    #homepage-left-col { 
-      margin-left: 3%;
-      margin-right: 3%;
-    }
-  }
+#homepage-right-col h3 {
+    border-bottom: 1px solid black;
+    margin-top: 20px;
+    padding-bottom: 10px;
+    text-align: center;
+}
 
-  @media (max-width: 480px) {
-    /* No margins for small displays */
-    #homepage-left-col { 
-      margin-left: 0%;
-      margin-right: 0%;
-    }
-  }
-
-  #homepage-right-col h3 {
-	  border-bottom: 1px solid black;
-	  margin-top: 20px;
-	  padding-bottom: 10px;
-	  text-align: center;
-  }
-  #homepage-right-col {
+#homepage-right-col {
     float: right;
     max-width: 40%;
-    margin-top:20px;
-  }
-  #homepage-logo {
+    margin-top: 20px;
+}
+
+#homepage-logo {
     background: url("images/logo-horizontal-large.png") -231px 0px;
     width: 325px;
     height: 186px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-  }
-  #homepage-text {
+}
+
+#homepage-text {
     margin-left: 0px;
     max-width: 100%;
     height: auto;
-  }
-  #social-actions {
+}
+
+#social-actions {
     margin-bottom: 26px;
     margin-top: 33px;
-  }
-  #social-actions table {
+}
+
+#social-actions table {
     margin-left: auto;
     margin-right: auto;
     width: 300px;
-  }
-  td.social-action { 
+}
+
+td.social-action {
     text-align: center;
     display: inline-block;
     margin-right: auto;
     width: 100px;
-  }
-  td.social-action.gplus { 
+}
+
+td.social-action.gplus {
     padding-left: 15px;
     width: 85px;
-  }
+}
 
+/* Responsive stuff */
+@media (max-width: 767px) {
+    /* Kinda small margins for kinda small displays */
+    #homepage-left-col {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+}
+
+@media (max-width: 480px) {
+    /* No margins for small displays */
+    #homepage-left-col {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
